rbac-best-practices-vpol/restrict-wildcard-resources/restrict-wildcard-resources.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
    name: restrict-wildcard-resources
    annotations:
        policies.kyverno.io/title: Restrict Wildcards in Resources
        policies.kyverno.io/category: RBAC Best Practices
        policies.kyverno.io/severity: medium
        policies.kyverno.io/subject: ClusterRole, Role, RBAC
        policies.kyverno.io/minversion: 1.6.0
        kyverno.io/kubernetes-version: "1.23"
        policies.kyverno.io/description: >-
            Wildcards ('*') in resources grants access to all of the resources referenced by the given API group and does not follow the principal of least privilege. As much as possible, avoid such open resources unless scoped to perhaps a custom API group. This policy blocks any Role or ClusterRole that contains a wildcard entry in the resources list found in any rule.
spec:
    validationActions:
        - Audit
    matchConstraints:
        resourceRules:
            - apiGroups: ["rbac.authorization.k8s.io"]
              apiVersions: ["*"]
              resources: ["roles", "clusterroles"]
              operations: ["CREATE", "UPDATE"]
    validations:
        - expression: "!has(object.rules) || !object.rules.exists(rule, has(rule.resources) && rule.resources.exists(resource, resource == '*'))"
          message: "Use of a wildcard ('*') in any resources is forbidden."
