rbac-best-practices-vpol/restrict-wildcard-resources/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-wildcard-resources-policy
spec:
  steps:
  - name: test-restrict-wildcard-resources
    try:
    - apply:
        file: ../restrict-wildcard-resources.yaml
    - assert:
        file: policy-assert.yaml
    - script:
        content: |
          kubectl patch validatingpolicy restrict-wildcard-resources --type=json -p='[{"op": "replace", "path": "/spec/validationActions", "value": ["Deny"]}]'
    - assert:
        file: enforce-policy-assert.yaml
    - apply:
        file: good-resource.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-resource.yaml
